# mobius

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md
models/: AGENTS.md
models/segment-text/coreml/: README.md  compile_mlmodelc.py  conversion_utils.py  convert_sat.py  pyproject.toml
models/speaker-diarization/pyannote-community-1/coreml/: .gitignore  README.md  compare-models.py  compile-coreml.py  convert-coreml.py  coreml_wrappers.py  embedding_io.py  plda_module.py  pyproject.toml  quantize-models.py
models/vad/silero-vad/coreml/: README.md  compare-models.py  compile_modelc.py  convert-coreml.py  convert-gguf.py  convert_model_components.py  pyproject.toml  quantize_unified_model.py  silero_vad_model_analysis.md
models/vad/silero-vad/coreml/compiled/silero-vad-unified-256ms-v6.0.0.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/silero-vad-unified-v6.0.0.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_int8.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_mixed.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_palette_2bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_palette_4bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_palette_6bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_palette_8bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_256ms_pruned_int8.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_int8.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_mixed.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_palette_2bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_palette_4bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_palette_6bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_palette_8bit.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/compiled/unified_pruned_int8.mlmodelc/: metadata.json  model.mil
models/vad/silero-vad/coreml/plots/: yc_first_minute_timestamp_data_20250915_191432_2c04b81.csv  yc_first_minute_timestamp_data_20250915_204018_2c04b81.csv  yc_first_minute_timestamp_data_20250915_204819_2c04b81.csv  yc_first_minute_timestamp_data_20250915_205528_2c04b81.csv
models/vad/silero-vad/coreml/plots/quantization/: comparison_results.json
(+108 files in other folders)
