[project]
name = "pyannote-coreml"
version = "0.1.0"
description = "Conversion tools for pyannote speaker diarization models to CoreML"
requires-python = "==3.10.12"
dependencies = [
  "coremltools==9.0b1",
  "torch==2.8.0",
  "pyannote-audio==4.0.0",
  "soundfile>=0.12.1",
  "scipy>=1.10",
  "librosa>=0.10.2",
  "huggingface-hub>=0.23",
  "tqdm",
  "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote_coreml"]

[tool.hatch.build.targets.sdist]
include = ["src/pyannote_coreml"]
